# ayase-quart

./: .dockerignore  .gitignore  Dockerfile  README.md  changelog.md  config.tpl.toml  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.frz.txt  requirements.txt  systemd.conf  update_js_integrity_values.py
data_utils/: make_thumbs.py  make_thumbs.sh  nginx_log_slurper.py
db_scripts/: README.md  add_media_orig_index.py  consolidate_databases.py  create_asagi_triggers.sql  create_extra_indices.sql  delete_ai_slop.py  drop_side_tables.sql  init_database.py  migrate_tagging.py  migrate_template.py  move_image_to_ritual.py  sqlite_create_asagi_delete_table.sql  sqlite_journal_recovery.py  walk_media_folder.py
dev/: bruno_aq.json
index_search/: README.md
index_search/lnx/: docker-compose.yml
index_search/manticore/: docker-compose.yml
index_search/meili/: docker-compose.yml
index_search/quickwit/: docker-compose.yml
index_search/typesense/: docker-compose.yml
preview/: README.md
src/: Dockerfile  asagi_converter.py  asset_hashes.json  blueprint_admin.py  blueprint_api.py  blueprint_app.py  blueprint_auth.py  blueprint_moderation.py  blueprint_search.py  boards.4chan.tpl.toml  boards.lainchan.tpl.toml  captcha.py  config.tpl.toml  configs.py  configs2.py  db.py  e_nums.py  endpoint_models.py  enums.py  exceptions.py  forms.py  highlighting.py  hypercorn.tpl.py  hypercorn.tpl.toml  hypercorn_conf.py  hypercorn_custom_logger.py  leafs.py  limiter.py  main.py  meta.py  operate_within_app_context.py  perf.py  rename_to_configs.py  requirements.txt  search.py  templates.py  test_all.py  threads.py  traffic_log.py  update_js_integrity_values.py  (+2 more)
src/archiveposting/: __init__.py
src/ayase_quart/: asagi_converter.py  enums.py  leafs.py  main.py  perf.py  templates.py  upstream.py
src/ayase_quart/blueprints/: __init__.py
src/ayase_quart/boards/: __init__.py
src/ayase_quart/cli/: __init__.py  arguments.py  lite_utils.py  prep_cli.py  reports.py  search_cli.py  utils.py
src/ayase_quart/configs/: __init__.py  conf_loader.py
src/ayase_quart/db/: __init__.py  mysql.py  redis.py  sqlite.py
src/ayase_quart/eav/: eav.py
src/ayase_quart/forms/: __init__.py
src/ayase_quart/media/: __init__.py  filesystem.py
src/ayase_quart/moderation/: auth.py  auth_api.py  auth_web.py  message.py  report.py  user.py
src/ayase_quart/posts/: capcodes.py  comments.py  quotelinks.py  template_optimizer.py
src/ayase_quart/render/: __init__.py
src/ayase_quart/search/: __init__.py  __main__.py  loader.py  post_metadata.py  query.py
src/ayase_quart/security/: __init__.py
src/ayase_quart/templates/: about.html  banner_site.html  board_index.html  catalog.html  configs.html  error_message.html  index.html  login.html  thread.html
src/ayase_quart/utils/: __init__.py  graphs.py  validation.py  web_helpers.py
src/blueprints/: __init__.py  bp_admin.py  bp_api.py  bp_app.py  bp_auth.py  bp_media.py  bp_moderation.py  bp_search.py
src/blueprints/api/: bp_admin.py  bp_app.py  bp_auth.py  bp_moderation.py
src/blueprints/plugins/: base.py
src/blueprints/web/: bp_about.py  bp_admin.py  bp_app.py  bp_archiveposting.py  bp_auth.py  bp_index_search.py  bp_media.py  bp_moderation.py  bp_search.py  bp_search_fts.py  bp_search_sql.py  bp_stats.py  bp_tagging.py  bp_vanilla_search.py  bp_vox.py
src/boards/: __init__.py
src/cli/: reports.py  utils.py
src/configs/: __init__.py  conf_common.py  conf_loader.py
src/db/: __init__.py  api.py  base_db.py  db_interface.py  db_mysql.py  db_sqlite.py  mysql.py  postgresql.py  redis.py  sqlite.py
src/eav/: eav.py
src/forms/: __init__.py
src/media/: __init__.py  filesystem.py
src/moderation/: __init__.py  api.py  auth.py  filter_cache.py  message.py  mod.py  report.py  reports.sql  user.py  users.sql
src/moderation/filter_cache/: __init__.py  base_fc.py  redis_fc.py  sqlite_fc.py
src/moderation/sql/: board_nums_cache.sql  message.sql  report_child.sql  reports.sql  user_permissions.sql  users.sql
src/paginate/: __init__.py
src/plugins/: __init__.py  i_blueprints.py  i_search.py
src/plugins/blueprints/: bp_example.py
src/plugins/search/: __init__.py  base.py  plugin_example.py  search_example.py
src/posts/: capcodes.py  comments.py  quotelinks.py  template_optimizer.py
src/redis_cache/: __init__.py
src/render/: __init__.py
src/search/: __init__.py  __main__.py  handler.py  highlighting.py  loader.py  main.py  pagination.py  post_metadata.py  query.py
src/search/providers/: __init__.py  baseprovider.py  lnx.py  manticore.py  manticore_testing.py  meili.py  mysql.py  quickwit.py  typesense.py
src/search_providers/: __init__.py  baseprovider.py  lnx.py  manticore.py  manticore_testing.py  meili.py  mysql.py  typesense.py
src/security/: __init__.py  captcha.py
src/sidetables/: __init__.py  __main__.py  populate.py  tables_indexes.py
src/static/: style.less
src/static/js/: index.js  (+7 more)
src/tagging/: db.py  enums.py  processor.py  tagger.py  tags.csv  utils.py
src/templates/: about.html  admin.html  archiveposting_form.html  banner_site.html  base.html  board_buttons.html  board_index.html  catalog.html  catalog_card.html  catalog_card_minimal.html  configs.html  debug.html  error_404.html  flash.html  footer.html  form_search.html  gallery.html  gallery_item.html  home.html  index.html  index_search.html  index_search_config.html  index_search_gallery_post_t.html  index_search_post.html  index_search_post2.html  index_search_post_t.html  latest.html  latest_gallery.html  latest_gallery_index.html  layout.html  login.html  macros.html  message.html  messages.html  nav.html  pagination.html  post.html  post2.html  post_sha256.html  posts.html  (+8 more)
src/tests/: endpoints.py  moderation.py  test_endpoints.py  test_html.py  test_moderation.py
src/utils/: __init__.py  graphs.py  integers.py  timestamps.py  validation.py  web_helpers.py
src/vox/: __init__.py
utils/: README.md  consolidate_databases.py  create_asagi_schema.sql  create_asagi_search_indexes.sql  create_database.sql  init_database.py
(+70 files in other folders)
