[project]
name = 'ayase-quart'
version = '0.0.1'
requires-python = '>=3.12,<3.14'
description = 'A web interface for imageboard archives using the Asagi database schema'
readme = 'README.md'
license = 'AGPL-3.0-or-later'
license-files = ['LICENSE']
authors = [
    { name = 'sky-cake', email = 'ayasequart@proton.me' },
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Web Environment',
    'Environment :: Console',
    'Framework :: Flask',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Communications :: BBS',
    'Topic :: Database',
    'Topic :: Sociology :: History',
    'Topic :: System :: Archiving',
]

dependencies = [
    'aiofiles',
    'aiohttp',
    'aiosqlite',
    'async-lru',
    'coredis',
    'click',
    'Flask-WTF',
    'hypercorn',
    'jinja2',
    'msgpack',
    'markupsafe',
    'orjson',
    'pillow',
    'python-dateutil',
    'pybase64',
    'Quart',
    'quart-wtforms',
    'quart-auth',
    'quart-flask-patch',
    'quart-rate-limiter',
    'quart-schema[pydantic]',
    'quart-uploads',
    'requests',
    'tabulate',
    'tqdm',
    'zlib-ng',
]

[project.urls]
Donate = 'https://github.com/sky-cake/ayase-quart#donate--support'
Documentation = 'https://github.com/sky-cake/ayase-quart#basic-set-up'
Changes = 'https://ayasequart.org/about#news'
Source = 'https://github.com/sky-cake/ayase-quart'
Demo = 'https://ayasequart.org'

[project.scripts]
ayaseq = 'ayase_quart.cli:main'

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-asyncio',
    'requests',
]
mysql = [
    'aiomysql',
    'cryptography',
]
postgresql = [
    'asyncpg',
]

# https://github.com/pypa/pip/issues/13449#issuecomment-3671676583 for pip in docker
[dependency-groups]
base = [
    'aiofiles',
    'aiohttp',
    'aiosqlite',
    'async-lru',
    'coredis',
    'click',
    'Flask-WTF',
    'hypercorn',
    'jinja2',
    'msgpack',
    'markupsafe',
    'orjson',
    'pillow',
    'python-dateutil',
    'pybase64',
    'Quart',
    'quart-wtforms',
    'quart-auth',
    'quart-flask-patch',
    'quart-rate-limiter',
    'quart-schema[pydantic]',
    'quart-uploads',
    'requests',
    'tabulate',
    'tqdm',
    'zlib-ng',
]
dev = [
    'pytest',
    'pytest-asyncio',
    'requests',
]
mysql = [
    'aiomysql',
    'cryptography',
]
postgresql = [
    'asyncpg',
]
all = [
    {include-group = "base"},
    {include-group = "postgresql"},
    {include-group = "mysql"},
    {include-group = "dev"},
]

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'
[tool.setuptools.packages.find]
where = ['src']
[tool.setuptools.package-data]
ayase_quart = [
    'static/**/*',
    'templates/**/*',
    'fonts/**/*',
    'moderation/sql/**/*',
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = [
    'tests',
]
pythonpath = 'src'
addopts = '-p no:anyio'
# asyncio_default_fixture_loop_scope = 'session'
# asyncio_mode = 'auto'
# filterwarnings = [
#     'error',
# ]

[tool.ruff]
target-version = 'py313'
src = [
    'src',
]
fix = false
show-fixes = false
output-format = 'full'
line-length = 150

[tool.ruff.lint]
preview = true
select = [
]
ignore = [
    'E501', # line too long
]
extend-select = [
    'F401', # unused imports
    'W291', # trailing whitespace
    'W292', # ensure trailing newline
    'W293', # blank lines with whitespace
    'W391', # at most 1 trailing newline
]

# [tool.pyright]
# pythonVersion = '3.12'
# include = ['src', 'tests']
# typeCheckingMode = 'basic'

# [build-system]
# requires = ['setuptools']
# build-backend = 'setuptools.build_meta'
